frontend/src/App.css
#site-container {
  width: 100vw;
  height: 100vh;
  display: flex;
}

.vertical-line {
  border-left: 2px solid lightgray;
}

.hide {
  display: none;
}

#sidebar {
  width: 15vw;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
  padding-top: 2vw;
  padding-bottom: 2vw;
  color: gray;
}

#sidebar-middle {
  height: 27.5vw;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: flex-start;
  gap: 0.5vw;
}

#sidebar-bottom {
  height: 10vw;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: flex-start;
}

.sidebar-button {
  display: flex;
  align-items: center;
  justify-content: flex-start;
  gap: 2vw;
  padding: 1vw 1vh;
  border-radius: 20px;
  width: 10vw;
  font-size: 1.05vw;
}

.sidebar-button:hover {
  background-color: rgb(236, 236, 236);
  cursor: pointer;
}

.sidebar-button img {
  width: 2vw;
}

#right-container {
  width: calc(85vw - 2px);
  display: flex;
  flex-direction: column;
}

#header {
  border-bottom: solid 2px lightgray;
  height: 10vh;
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.create-project-button {
  background-color: lightgreen;
  padding: 0.8em;
  font-size: 2vh;
  border-radius: 30px;
}

.create-project-button:hover {
  cursor: pointer;
}

#create-project-page {
  padding-left: 3vw;
  padding-top: 1vh;
}

#create-project-form label {
  font-weight: bold;
}

#create-project-form input {
  background-color: white;
  color: black;
  padding: 1vh;
  margin-top: 1vh;
  width: 30vw;
  border-color: lightgray;
  border-radius: 10px;
}

#project-invite {
  background-image: url('assets/search.png');
  background-position: calc(30vw - 20px) 0px;
  background-repeat: no-repeat;
}

#project-create-icon-container {
  display: flex;
  align-items: center;
}

#project-create-icon-container label {
  margin-left: 2vw;
  background-color: black;
  color: white;
  padding: 10px;
  border-radius: 10px;
  font-weight: lighter;
}
#project-create-icon-container label:hover {
  cursor: pointer;
}

.project-icon-container {
  width: 100px;
  height: 100px;
}

.project-icon {
  width: 100%;
  height: 100%;
  border-radius: 100px;
}

